Changes since version 1.1.2
---------------------------

- Fixed a bug that prevented Apache 1.x from starting.

- The documentation has always stated that same-named constructs
  cannot be directly nested inside each other. (For example, a
  module `M' cannot contain a constant named `M'.) The Slice parser
  compiler did not enforce this correctly up to now for modules
  containing constructs with the same name as the enclosing module.
  This has been fixed and now results in a diagnostic.

- The Slice parser now deprecates Slice definitions at global scope:
  only modules can be defined at global scope. Everything else
  (constants, classes, interfaces, etc.) must be defined inside a
  module.

  For the time being, the compiler issues a warning for each global
  definition but continues to compile the code. Global non-module
  definitions will elicit a hard error two releases from now.

Changes since version 1.1.1
---------------------------

- Fixed a compilation error for Visual C++.

Changes since version 1.1.0
---------------------------

- Compatibility with PHP 5.0.0 (final).

Changes since version 1.0.3
---------------------------

- Changed facet interface to be compatible with Ice 1.4.0.

- Added the proxy methods ice_newContext and ice_getContext.

- Fixed a bug that could cause a marshaling exception for uninitialized
  string data members.

- Fixed a marshaling bug that caused an assertion failure in the value
  demo.

Changes since version 1.0.2
---------------------------

- Fixed a link error when compiling with Visual C++ 6.0.

Changes since version 1.0.1
---------------------------

- Updated for compatibility with Ice 1.3.0 and PHP5 beta4. The patch
  in the file patch.txt must be applied to PHP5b4 prior to building
  it on Unix platforms.

- Added the member functions ice_preMarshal and ice_postUnmarshal to
  Ice_Object. The default implementations do nothing, but subclasses