@@ -1,6 +1,11 @@
 Changes since version 1.1.2
 ---------------------------
 
+- The configuration directives in an INI file are now named
+  "ice.config", "ice.slice", and "ice.options", for consistency
+  with the global directives. The previous directive names are
+  still supported.
+
 - Fixed a bug that prevented Apache 1.x from starting.
 
 - The documentation has always stated that same-named constructs
